Finalizando a calculadora inserindo layout

--- a/projects/dev/calculadora/pubspec.yaml
+++ b/projects/dev/calculadora/pubspec.yaml
@@ -64,7 +64,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
 
   assets:
-    - assets/images/arrow_back.png
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -88,6 +88,11 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-  #
+
+  fonts:
+    - family: ds-dig
+      fonts:
+      - asset: assets/fonts/DS-DIGI.ttf
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
